Tweak Lua interface